--- a/src/components/Doces/Doces.css
+++ b/src/components/Doces/Doces.css
@@ -1,18 +1,46 @@
-.body {
+body {
     width: 100%;
     height: 100vh;
     background-color: #ffffff;
 }
-
-.header {
+.navbar{
     width: 100%;
     height: 80px;
-
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
     border-bottom: 4px solid #ED7E07;
-    align-items: center;
     background-color: black;
-
 }
+.esquerda{
+    display: flex;
+    align-items: center;
+    width: 150px;
+    margin-left: 5%;
+    flex-direction: row;
+}
+
+.logo{
+    display: flex;
+    margin-top: 30px;
+    align-items: center;
+}
+
+.direita{
+    display: flex;
+    margin-right: 5%;
+    width: 150px;
+    flex-direction: row;
+    align-items: center;
+}
+.menu{
+    margin-right: 50px;
+}
+.carrinho{
+  margin-left:50px;
+}
+
+
 
  svg  {
     background-color: black;
@@ -21,39 +49,18 @@
     height: 32px;
     cursor: pointer;
 }
-.esquerda{
-    display: flex;
 
-}
-
-.direita{
-
-
-
-    justify-content: flex-end;
-    right: 100px;
-   
-}
-
-.user {
-   
-right: 80px;
-}
 
 .title {
     color: #ffffff;
     font-family: cursive;
+    font-size: 25px;
 }
 
 .h-logo {
         width: 135px;
         height: 135px;
-        background-image: url ('logo2.jpg');
         background-size: cover;
-        border-radius: 50%;
-        position: absolute;
-        left: 700px;
-        top: 0px;
-          
+        border-radius: 50%;          
 }
 
