coreção de algumas coisas

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -11,6 +11,7 @@ body {
     justify-content: space-between;
     border-bottom: 4px solid #ED7E07;
     background-color: black;
+    z-index: 99;
 }
 .esquerda{
     display: flex;
@@ -35,6 +36,7 @@ body {
 }
 .menu{
     margin-right: 50px;
+    
 }
 .carrinho{
   margin-left:50px;
@@ -61,6 +63,8 @@ body {
         width: 135px;
         height: 135px;
         background-size: cover;
-        border-radius: 50%;          
+        border-radius: 50%;      
+        color: #ED7E07;    
 }
+
 
