--- a/src/components/Footer/footerStyles.css
+++ b/src/components/Footer/footerStyles.css
@@ -1,8 +1,9 @@
 .footer {
     width: 100%;
-    height: px;
+    height: 80vh;
     position: relative;
     background: #000000;
+    
 }
 
 svg  {
@@ -11,7 +12,7 @@ svg  {
     width: 32px;
     height: 32px;
     cursor: pointer;
-    padding-left: 100px;
+    
 }
 .footer .container {
     display: flex;
@@ -21,17 +22,14 @@ svg  {
 }
 .social-group{
     display:  flex;
-    flex-direction: column;
-    
-}
-.fodase{
-    display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-}
-.redes{
     
+}
+
+.redes{
+    justify-content: center;
+    align-items: center;
 }
 .footer .top {
     width: 100%;
