--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,15 +3,15 @@ body {
     height: 100vh;
     background-color: #ffffff;
 }
-.navbar{
+.navbar2{
     width: 100%;
     height: 80px;
     position: fixed;
     display: flex;
+    z-index: 3;
     justify-content: space-between;
     border-bottom: 4px solid #ED7E07;
     background-color: black;
-    
 }
 .esquerda{
     display: flex;
@@ -23,7 +23,7 @@ body {
 
 .logo{
     display: flex;
-    margin-top: 30px;
+    margin-top: 50px;
     align-items: center;
 }
 
@@ -36,7 +36,6 @@ body {
 }
 .menu{
     margin-right: 50px;
-    
 }
 .carrinho{
   margin-left:50px;
@@ -63,8 +62,7 @@ body {
         width: 135px;
         height: 135px;
         background-size: cover;
-        border-radius: 50%;      
-        color: #ED7E07;    
+        border-radius: 50%;          
 }
 
 
