--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -1,17 +1,67 @@
 .body{
-   
-        background-color: rgb(248, 240, 240);
-  
-    /* width: 100%;
-    height: 100vh; */
+        background-color: white;  
 }
 
-.img-login{
-    width: 60%;
-    height: 100%;
-   
-}
 
 .login-img{
-    width:100% 
+    width:100%;
+    height: 50%;
+}
+
+input:focus{
+    outline: 0;
+}
+
+.h1-login{
+    height: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: cursive;
+    color: rgb(235, 143, 45);
+}
+
+
+.login-input{
+    cursor: pointer;
+    font-family: cursive;
+    font-size: 20px;
+    width: 60%;
+    background-color: #ffffff;
+    border-radius: 15px;
+    height: 65%;
+    justify-content: center;
+    display: flex;
+    gap: 5%;
+    flex-direction: column;
+    text-align: center;
+    background: rgba(255, 255, 255, 0.35);
+    box-shadow: 0 8px 32px 0 #817f7f;
+}
+
+.login-usuario{
+    flex-direction: column;
+    background-color: transparent;
+    border: 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-senha{
+    flex-direction: column;
+    background-color: transparent;
+    border: 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.every-input{
+    background-color: rgb(255, 255, 255) ;
+    width: 50%;
+    height: 100%;
+    backdrop-filter: blur(11.5px);
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    
 }
