--- a/src/components/EditarP/editarperfil.css
+++ b/src/components/EditarP/editarperfil.css
@@ -6,7 +6,7 @@
 
 
 .foto-editar{
-    background: url('../Perfil/emojifome.png') no-repeat center center/cover;
+    /* background: url('../Perfil/emojifome.png') no-repeat center center/cover; */
     content: '';
     width: 10rem;
     height: 10rem;
