--- a/src/components/Principal/index.css
+++ b/src/components/Principal/index.css
@@ -19,6 +19,8 @@
     }
 .preco {
         font-size: 13px;
+        margin-top: 25px;
+        margin-bottom: 25px;
       }
   
   .overflow {
@@ -51,4 +53,28 @@
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(245,131,0,1) 100%, rgba(0,212,255,1) 100%); */
   
 }
+.button {
+  display: inline-block;
+  padding: 5px 45px;
+  font-size: 18px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #ED7E07;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px rgb(231, 161, 69);
+}
 
+.button:hover {
+  background-color: #ffffff
+
+}
+
+.button:active {
+  background-color: #ED7E07;
+  box-shadow: 0 5px rgba(243, 111, 4, 0.678);
+  transform: translateY(4px);
+}
