--- a/src/components/Footer/footerStyles.css
+++ b/src/components/Footer/footerStyles.css
@@ -1,9 +1,14 @@
 .footer {
-    width: 100%;
+    /* width: 100%;
     height: auto;
-    position: fixed;
+    position: fixed; */
     background: #000000;
-    margin: 0;
+    margin: 0; 
+    /* position: fixed; */
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
 
 svg  {
