--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100px;
     z-index: 3;
-    position: fixed;
+    /* position: fixed; */
     display: flex;
     justify-content: space-between;
     border-bottom: 4px solid #ED7E07;
@@ -72,6 +72,7 @@
     padding: 10px 15px;
     gap: 15px;
     transition: all 0.5s;
+    
 }
 
 .doces {
@@ -103,7 +104,15 @@
     gap: 15px;
     transition: all 0.5s;
 }
-
+.Bolo {
+    background-color: black;
+    color: #ED7E07;
+    border-bottom: 1px solid #ED7E07;
+    display: flex;
+    padding: 10px 15px;
+    gap: 15px;
+    transition: all 0.5s;
+}
 .jantar {
     background-color: black;
     color: #ED7E07;
@@ -113,7 +122,15 @@
     gap: 15px;
     transition: all 0.5s;
 }
-
+.Especias {
+    background-color: black;
+    color: #ED7E07;
+    border-bottom: 1px solid #ED7E07;
+    display: flex;
+    padding: 10px 15px;
+    gap: 15px;
+    transition: all 0.5s;
+}
 .eventos {
     background-color: black;
     color: #ED7E07;
@@ -136,8 +153,6 @@
  .qsomos {
     background-color: black;
     color: #ED7E07;
-    width: 100%;
-    height: 20px;
     border-bottom: 1px solid #ED7E07;
     display: flex;
     padding: 10px 15px;
@@ -192,7 +207,12 @@
 
 
 }
+.bolo:hover{
+    color: white;
+    transition: all 0.5s;
 
+
+}
 
 .navbar .icon {
     font-size: 3rem;
@@ -207,6 +227,9 @@
     height: 100%;
     align-items: center;
     padding: 1rem;
+    z-index: 2000;
+   
+
     
 }
 
