--- a/src/components/Principal/index.css
+++ b/src/components/Principal/index.css
@@ -10,6 +10,7 @@
   
   .card-body {
     padding: 10px !important;
+    background-color: rgb(255, 255, 255);
     /* margin-bottom: 10px!important; */
     
   }
