--- a/src/components/HomeDeslogado/homeDeslogado.css
+++ b/src/components/HomeDeslogado/homeDeslogado.css
@@ -1,98 +1,81 @@
-.link-cadastro{
-    background-color: rgb(177, 22, 177);
+.header{
+    width: 100%;
+    height: 100px;
+    z-index: 3;
+    /* position: fixed; */
     display: flex;
-    margin: 100px;
+    justify-content: space-between;
+    border-bottom: 4px solid #ED7E07;
+    background-color: black;
+    top: 0%;
+    margin-bottom: 5000px;
+}
+.h-logo {
+    width: 135px;
+    height: 135px;
+    background-size: cover;
+    border-radius: 50%;  
+    z-index: 6;      
+}
+.logo{
+    display: flex;
     margin-top: 55px;
     align-items: center;
-    flex-direction: row;
-    margin-left: 400px;
-    height: 20px;
-    width: 300px;
-}
-.link-login{
-    background-color: rgb(149, 88, 9);
-    align-items: center;
-    flex-direction: row;
-    margin-left: 800px;
-    height: 20px;
-    width: 300px;
-   
-
+    justify-content: center;
+    /* margin-right: 1rem; */
 }
 
-.subtitulo{
-    color: rgb(0, 0, 0);
-    display: flex;
-    margin-top: 0px;
-    align-items: center;
-    margin-left:350px;
- 
-}
-.grande{
-    color: #ED7E07;
-    display: flex;
-    margin-top: 0px;
-    align-items: center;
-    margin-left:170px;
-}
-.cafezinho{
-    color: rgb(0, 0, 0);
-    display: flex;
-    margin-top: 0px;
-    align-items: center;
-    margin-left:170px;
-}
-.entregarapida{
-    color: rgb(0, 0, 0);
-    display: flex;
-    margin-top: 0px;
-    align-items: center;
-    margin-left:200px;
-    
-}
-.carinhoemoji{
-    color: rgb(0, 0, 0);
-    display: flex;
-    margin-top: 0px;
-    align-items: center;
-    margin-left:200px;
-    
-}
-.caixaembalagem{
-    color: rgb(0, 0, 0);
-    display: flex;
-    margin-top: 0px;
-    align-items: center;
-    margin-left:170px;
-}
-.carinhoemoji{
-    color: rgb(0, 0, 0);
-    display: flex;
-    margin-top: 0px;
-    align-items: center;
-    margin-left:170px;
-    
-}
+/* .novidadeslink{
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .DivCadastroLogin{
-    align-items: center;
-    flex-direction: row;
-    margin-left: 800px;
-    height: 20px;
-    width: 300px;
-    
 } */
+
+.novidades {
+    background-color: black;
+    color: #ED7E07;
+    border-bottom: 1px solid #ED7E07;
+    display: inline-block;
+    padding: 10px 15px;
+    /* gap: 15px; */
+    transition: all 0.5s;
+    text-decoration: none;
+}
+
+
+.novidades:hover{
+    color: white;
+    transition: all 0.5s;
+}
+
+.cadastrar {
+    background-color: black;
+    color: #ED7E07;
+    border-bottom: 1px solid #ED7E07;
+    display: flex;
+    padding: 10px 15px;
+    gap: 15px;
+    transition: all 0.5s;
+    text-decoration: none;
+}
+
+
+.cadastrar:hover{
+    color: white;
+    transition: all 0.5s;
+}
+
+.logar {
+    background-color: black;
+    color: #ED7E07;
+    border-bottom: 1px solid #ED7E07;
+    display: flex;
+    padding: 10px 15px;
+    gap: 15px;
+    transition: all 0.5s;
+    text-decoration: none;
+}
+
+
+.logar:hover{
+    color: white;
+    transition: all 0.5s;
+}
