--- a/src/components/HomeDeslogado/homeDeslogado.css
+++ b/src/components/HomeDeslogado/homeDeslogado.css
@@ -6,9 +6,10 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 4px solid #ED7E07;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     top: 0%;
-    margin-bottom: 5000px;
+    margin-bottom: 500px;
+    flex-direction: row;
 }
 .h-logo {
     width: 135px;
@@ -19,63 +20,59 @@
 }
 .logo{
     display: flex;
-    margin-top: 55px;
+    margin-top: 55px important!;
     align-items: center;
     justify-content: center;
-    /* margin-right: 1rem; */
+    margin:  auto;
 }
-
-/* .novidadeslink{
-
-} */
-
+.nAVlinkESQUERDA{
+    color: #ED7E07;
+    justify-content: center;
+    align-items: center;
+    margin-left: 40px;
+}
 .novidades {
-    background-color: black;
-    color: #ED7E07;
-    border-bottom: 1px solid #ED7E07;
-    display: inline-block;
-    padding: 10px 15px;
-    /* gap: 15px; */
-    transition: all 0.5s;
-    text-decoration: none;
+margin-top: 20px;
+color: #ED7E07;
+padding-right: 80px ;
 }
-
-
-.novidades:hover{
+.navbar-expand .navbar-nav .nav-link {
+   color: #ED7E07;
+   font-size: 15px;
+   padding-right: 80px ;
+}
+.navbar-expand .navbar-nav .nav-link:hover {
     color: white;
-    transition: all 0.5s;
 }
-
-.cadastrar {
-    background-color: black;
+.navlinkdireita{
     color: #ED7E07;
-    border-bottom: 1px solid #ED7E07;
-    display: flex;
-    padding: 10px 15px;
-    gap: 15px;
-    transition: all 0.5s;
-    text-decoration: none;
+    justify-content: center;
+    align-items: center;
 }
-
-
-.cadastrar:hover{
-    color: white;
-    transition: all 0.5s;
-}
-
 .logar {
-    background-color: black;
+    margin-top: 40px;
     color: #ED7E07;
-    border-bottom: 1px solid #ED7E07;
-    display: flex;
-    padding: 10px 15px;
-    gap: 15px;
-    transition: all 0.5s;
-    text-decoration: none;
 }
-
-
-.logar:hover{
+.cadastrar {
+    margin-top: 20px;
+    color: #ED7E07;
+}
+a.logar.nav-link {
+    color: #ED7E07;
+    font-size: 15px;
+    margin-top: 20px;
+}
+a.logar.nav-link:hover {
     color: white;
-    transition: all 0.5s;
+}
+a.cadastrar.nav-link:hover{
+    color: white;
+}
+a.cadastrar.nav-link {
+    color: #ED7E07;
+    font-size: 15px;
+    padding-right: 80px ;
+}
+div.nav {
+    margin-top: 8px;
 }
