--- a/src/components/Principal/index.css
+++ b/src/components/Principal/index.css
@@ -15,6 +15,7 @@
     
   }
 
+  
   .card-title{
       font-size: 20px;
     }
@@ -80,3 +81,7 @@
   box-shadow: 0 5px rgba(243, 111, 4, 0.678);
   transform: translateY(4px);
 }
+
+a.buttton {
+    color: #ED7E07;
+  }
