--- a/src/components/Doces/Doces.css
+++ b/src/components/Doces/Doces.css
@@ -9,12 +9,12 @@
         margin-left:5rem ;
  }
 
-img{
+/* img{
     width:250px ;
     height:200px ;
     border-radius:10px ;
 
-}
+} */
 .card-product{
     background-color:#F9F7F3 ;
     margin-right:2rem ;
