--- a/src/components/Perfil/perfil.css
+++ b/src/components/Perfil/perfil.css
@@ -1,4 +1,4 @@
-.input-Cconta{
+/* .input-Cconta{
     height: 30%;
     display: flex;
     align-items: center;
@@ -125,4 +125,4 @@ input:focus{
     cursor: pointer;
     margin-right: 4%;
     border-radius: 50px;
-}
+} */
