quem somos finalizado

--- a/src/components/Cadastro/cadastroStyle.css
+++ b/src/components/Cadastro/cadastroStyle.css
@@ -80,7 +80,7 @@
     flex-direction: column;
     text-align: center;
     background: rgba(255, 255, 255, 0.35);
-    box-shadow: 0 8px 32px 0 #ED7E07;
+    box-shadow: 0 8px 32px 0 #181512;
     
 }
 
