--- a/src/components/QuemSomos/quemSomos.css
+++ b/src/components/QuemSomos/quemSomos.css
@@ -1,9 +1,12 @@
 .mini-texto{
     text-align: center;
-    width: 50%;
+    width: 80%;
+  
 }
-.texto-equipe{
-    text-align: left;
+.texto-val{
+    text-align: center;
+    width: 90%;
+   
     
 }
 
@@ -11,30 +14,41 @@
     display: flex;
     justify-content: space-around;
     flex-direction: row;
+    align-items: center;
+}
+
+.div-esquerda{
+    width: 50%;
+   
+}
+
+.div-direita{
+    width: 40%;
+   
 }
 
 .icon-qsomos {
     background-color: white;
     color: #ED7E07;
-    width: 50%;
-    height: 100px;
+    width: 85%;
+    height: 80px;
 }
 
-.icon-equipe {
+.icon-balance {
     background-color: white;
     color: #ED7E07;
-    width: 50%;
-    height: 100px;
+    width: 100%;
+    height: 80px;
 }
 
 .h2-empresa {
     text-align: center;
-    width: 50%;
-    color: black;
+    width: 80%;
+   
 }
 
-.h2-equipe {
+.h2-valores{
     text-align: center;
-    width: 50%;
-    color: black;
+    width: 100%;
+    height: 20%;
 }
