--- a/src/components/Cadastro/cadastroStyle.css
+++ b/src/components/Cadastro/cadastroStyle.css
@@ -1,14 +1,112 @@
-.body{
-    background-color: #a37e55;
+.main-cadastro{
+    width: 100vw;
+    height: 80vh;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5%;
 }
 
+.left-cadastro{
+    width: 50vh;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
-.cadastrar-se {
+.left-cadastro > h1{
+    color: black;
+}
+
+.right-cadastro{
+    width: 50vh;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-cadastro{
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px 35px;
+    background-color: black;
+    border-radius: 20px;
+    box-shadow: 0px 10px 40px #181512;
+
+}
+
+.card-cadastro > h1{
+  color:#ED7E07;
+  font-weight: 00;
+  margin: 0;
+}
+
+.textfield{
+    width:100% ;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin: 10px 0px;
+}
+
+.textfield > input{
+    width: 100%;
+    border: none;
+    border-radius:10px ;
+    padding: 15px;
+    background-color: white;
+    color: #181512;
+    font-size: 12pt;
+    box-shadow: 0px 10px 40px #181512;
+    outline:none ;
+    box-sizing: border-box;
+}
+
+.textfield > label{
+    color:#ED7E07;
+    margin-bottom: 10px;
+}
+
+.textfield > input::placeholder{
+    color:#181512;
+}
+
+.bot-cadastro{
+    width: 80% ;
+    padding: 16px;
+    margin: 25px;
+    border: none;
+    border-radius: 8px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing:3px ;
+    color: white;
+    cursor: pointer;
+    background-color: #ED7E07;
+    /* box-shadow: 0px 10px 40px 12px rgb(34, 33, 33); */
+}
+.motoboy{
+    width: 130%;
+}
+
+.cadastroImg.jpg{
+    width: 50%;
+}
+
+/* .cadastrar-se {
     width: 50%;
     height: 0%;
     box-shadow: 0 8px 32px 0 #ED7E07;
   
-}
+} */
 
 .imgCadastro{
     width:100%;
@@ -48,150 +146,3 @@
 
 
 
-.box-input {
-    background-color: rgb(255, 255, 255) ;
-    width: 50%;
-    height: 100%;
-    backdrop-filter: blur(11.5px);
-    justify-content: center;
-    display: flex;
-    align-items: center;
-}
-
-
-.input-Cconta{
-    height: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: rgb(235, 143, 45);
-}
-
-.cadastro {
-    cursor: pointer;
-    font-size: 20px;
-    width: 55%;
-    background-color: #ffffff;
-    border-radius: 15px;
-    height: 60%;
-    justify-content: center;
-    display:flex;
-    gap: 3%;
-    flex-direction: column;
-    text-align: center;
-    background: rgba(255, 255, 255, 0.35);
-    box-shadow: 0 8px 32px 0 #181512;
-    
-}
-
-.black-box {
-    display: flex;
-    flex-direction: row;
-    overflow: hidden;
-    width: 100%;
-    height: 100vh;
-    align-items: stretch;
-    text-align: center;
-}
-
-.input-cadastro { 
-    flex-direction: column;
-    background-color: transparent;
-    border: 0;
-    justify-content: center;
-    align-items: center;
-        
-} 
-
-.input-email {
-    flex-direction: column;
-    background-color: transparent;
-    border: 0;
-    justify-content: center;
-    align-items: center;
-  
-   
-}
-
-.input-senha{
-    flex-direction: column;
-    background-color: transparent;
-    border: 0;
-    justify-content: center;
-    align-items: center;
-   
-}
-
-.input-ConSenha{
-    flex-direction: column;
-    background-color: transparent;
-    border: 0;
-    justify-content: center;
-    align-items: center;
-   
-}
-
-.input-cadastro input {
-    padding: 0.8px;
-    height: 100%;
-    width: 70%;
-    border: 0;
-    gap: 10%;
-    border-bottom: 1px solid #817f7f;
-    background-color: transparent;
-    line-height: 1.5; 
-}
-
-.input-email input{
-    padding: 0.8px;
-    height: 100%;
-    width: 70%;
-    border: 0;
-    border-bottom: 1px solid #817f7f;
-    background-color: transparent;
-    line-height: 1.5
-}
-
-input:focus{
-    outline: 0;
-}
-
-.input-senha input{
-    padding: 0.8px;
-    height: 100%;
-    width: 70%;
-    border: none;
-    border-bottom: 1px solid #817f7f;
-    background-color: transparent;
-    line-height: 1.5
-}
-
-.input-ConSenha input{
-    padding: 0.8px;
-    height: 100%;
-    width: 70%;
-    border: 0;
-    border-bottom: 1px solid #817f7f;
-    background-color: transparent;
-    line-height: 1.5
-}
-
- .botao-cadastro {
-    background-color: black;
-    width: 30%;
-    height: 150%;
-    border-style:none;
-    border-radius: 50%;
-    border: none;
-    padding: 5px;
-    color: #ED7E07;
-    cursor: pointer;
-    
-} 
-/* 
-.link-login {
-    color: black;
-    height: 50%;
-    height: 50%;
-    
-} */
