--- a/src/components/Doces/Doces.css
+++ b/src/components/Doces/Doces.css
@@ -29,7 +29,7 @@
     color:black ;
 }
 
-button{
+/* button{
     max-width: 100px ;
     text-align:center ;
     margin: 1rem auto;
@@ -42,7 +42,7 @@ button{
         background-color:#53A2BE  ;
     } */
 
-}
+/* } */ */
 .col-md-4{
     margin-bottom: 20px;
 }
