--- a/src/components/HomeDeslogado/homeDeslogado.css
+++ b/src/components/HomeDeslogado/homeDeslogado.css
@@ -11,6 +11,20 @@
     /* margin-bottom: 2px; */
     flex-direction: row;
 }
+
+.divflex{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.daiana{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .h-logo {
     width: 135px;
     height: 135px;
@@ -30,6 +44,11 @@
     justify-content: center;
     align-items: center;
     margin-left: 40px;
+}
+
+a.novidades.nav-link {
+    
+    color:  rgb(236, 126, 9) important!;
 }
 .novidades {
 margin-top: 20px;
@@ -152,9 +171,9 @@ div.nav {
         align-items: center;
         justify-content: center;
         /* display: flex; */
-        margin-top: 150px;
+      
         
-        padding-left: 100px;
+      
     }
 .hamb {
     display: flex;
@@ -179,12 +198,14 @@ div.nav {
 .LOGOHAMB{
     width: 600px;
     height: 600px;
+    margin-bottom: 200px;
     /* margin-top: 20px important!; */
 }
 
 .buttons {
-    display: inline-block;
-    font-size: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 a.button{
     display: block important!;
