--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -9,20 +9,14 @@
     background-color: black;
     top: 0%;
 }
-.esquerda{
-    background-color: black;
-    display: flex;
-    align-items: center;
-    width: 150px;
-    margin-left: 5%;
-    flex-direction: row;
-}
+
 .h-logo {
     width: 135px;
     height: 135px;
     background-size: cover;
     border-radius: 50%;  
-    z-index: 6;        
+    z-index: 6;   
+
 }
 
 .logo{
@@ -33,16 +27,15 @@
 
 .direita{
     display: flex;
-    margin-right: 5%;
     width: 150px;
     flex-direction: row;
     align-items: center;
 }
-/* .menu{
+.menu{
     margin-right: 50px;
     display: flex;
     justify-content: space-between;
-} */
+}
 .carrinho{
   margin-left:50px;
 }
@@ -64,7 +57,7 @@
     font-size: 25px;
 } */
 
-.home {
+/* .home {
     background-color: black;
     color: #ED7E07;
     border-bottom: 1px solid #ED7E07;
@@ -235,12 +228,127 @@
     z-index: 2000;
 
 
+} */
+
+
+/*
+Inspiration for this menu: https://dribbble.com/shots/2962837-Header-Nav by Scout: https://dribbble.com/scout
+*/
+
+/* //Basics */
+* {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	font-family: 'Lato', sans-serif;
+	line-height: 1;
 }
 
-.active {
-    display: block !important;
+body {
+	background-color: #F5F6F8;
+	
 }
-.icon {
-    font-size: 1.4rem;
+
+/* //Color Variables
+$sidebar-background-color: #313443;
+$active-sidebar-link-color: #22252E;
+$hover-sidebar-link-color: $active-sidebar-link-color;
+$active-link-color: #98D7EC;
+$tooltip-background-color: $sidebar-background-color; */
+
+/* .navbar {
+    background-color: #000000;
+    height: 80px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    color: rgb(241, 241, 241);
+  } */
+
+  .navbar{
+    background-color: black;
+    display: flex;
+    align-items: center;
+    width: 150px;
+    flex-direction: row;
+    
+}
+
+  
+  .menu-bars {
+    margin-left: 2rem;
+    font-size: 2rem;
+    background: none;
+  }
+  
+  .nav-menu {
+    background-color: #000000;
+    width: 200px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    transition: 850ms;
+  }
+  
+  .nav-menu.active {
+    left: 0;
+    transition: 350ms;
+    z-index: 2000;
+    
+    
+    
+  }
+  
+  .nav-text {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding: 8px 0px 8px 16px;
+    list-style: none;
+    height: 60px;
+  }
+  
+  .nav-text a {
+    text-decoration: none;
+    color: #f5f5f5;
+    font-size: 18px;
+    width: 95%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    border-radius: 4px;
+  }
+  
+  .nav-text a:hover {
+    background-color: #000000;
+  }
+  
+  .nav-menu-items {
+    width: 2000%;
+    margin-bottom: 100px;
+    padding-right: 100px;
+    height: 100px;
+  }
+  
+  .navbar-toggle {
+   
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    border-bottom: 4px solid #ED7E07;
+    background-color: black;
+
+  }
+  
+  span {
+    margin-left: 16px;
+  }
+  icon{
     color: #ED7E07;
-}
+  }
