--- a/src/components/Cadastro/cadastroStyle.css
+++ b/src/components/Cadastro/cadastroStyle.css
@@ -1,6 +1,6 @@
 .main-cadastro{
     width: 100vw;
-    height: 80vh;
+    height: 40vh;
     background-color: white;
     display: flex;
     justify-content: center;
@@ -18,6 +18,7 @@
 }
 
 .left-cadastro > h1{
+    margin-top: 60%;
     color: black;
 }
 
@@ -31,6 +32,7 @@
 
 .card-cadastro{
     width: 25%;
+    margin-top: 15%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -95,6 +97,7 @@
 }
 .motoboy{
     width: 130%;
+    
 }
 
 .cadastroImg.jpg{
@@ -141,8 +144,3 @@
     margin-top: 55px;
     align-items: center;
 }
-
-
-
-
-
