--- a/src/components/Doces/CARDSDOCES/index.css
+++ b/src/components/Doces/CARDSDOCES/index.css
@@ -1,4 +1,3 @@
-
 .row {
   margin-bottom: 0px;
   margin-top: 10px;
@@ -6,32 +5,31 @@
 .card-img-top{
   width: 250px;
   height: 250px;
-
-
-
 }
 .Adicionar{
   background-color: white;
   padding-right: 10px;
   width: 30px;
 }
-
     .Remover {
       background-color: white;
       padding-left: 10px;
       width: 30px;
     }
-
 .card:hover {
   box-shadow: 2px 6px 10px 0px #ED7E07 !important;
   transition: all 0.7s linear;
 }
-
 .card-body {
   padding: 10px !important;
   background-color: rgb(255, 255, 255);
   /* margin-bottom: 10px!important; */
-  
+  align-items: center;
+
+}
+.buttonteste {
+  justify-content: center;
+  align-items: center;
 }
 
 .card-title{
@@ -40,24 +38,20 @@
 .preco {
       font-size: 13px;
     }
-
 .overflow {
   overflow: hidden;
   flex: 1
   
   
 }
-
 .card-img-top {
   transform: scale(1);
   transition: all 0.2s ease-in-out;
   
 }
-
 .card-img-top:hover {
   transform: scale(1.8);
 }
-
 .col-md-4{
     margin-bottom: 20px;
     margin-top: 1000px;
@@ -70,49 +64,47 @@
   color: #ED7E07;
   /* background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(245,131,0,1) 100%, rgba(0,212,255,1) 100%); */
-
 }
 .card-description{
   color: #000000;
-
 }
 .preco{
   color: #ED7E07;
-  
 }
 .card-title{
   font-size: 30px;
   color: #ED7E07;
 }
-
   .resposta {
-
     width: 40px;
     border: none;
   }
 
 
+
   .buttona {
-    display: flexbox;
-    padding: 5px 45px;
+    /* display: flex; */
+    width: 320px;
+    height: 40px;
+    justify-content: center;
     font-size: 18px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     outline: none;
+    /* outline: none; */
     color: #fff;
     background-color: #ED7E07;
     border: none;
-    border-radius: 15px;
-    box-shadow: 0 9px rgb(231, 161, 69);
-    margin-bottom: 12px;
+
   }
-  
+
   .buttona:hover {
-    background-color: #ffffff
-  
+ 
+    background-color: #eb8816
+
   }
-  
+
   .buttona:active {
     background-color: #ED7E07;
     box-shadow: 0 5px rgba(243, 111, 4, 0.678);
